--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -334,7 +334,7 @@ jobs:
             cd ..
             # Zip the directory
             tar -C backend -czvf artifact.tar.gz  .
-            mkdir -p  ~/project/.circleci/ansible/roles/deploy/files
+            mkdir -p  .circleci/ansible/roles/deploy/files
             cp ./artifact.tar.gz  .circleci/ansible/roles/deploy/files
             cd .circleci/ansible
             ansible-playbook -i inventory.txt deploy-backend.yml
