--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -22,7 +22,7 @@
     pm2 start npm -- start
     pm2 start ~/web/main.js 
   args:
-    chdir: ~/backend/dist
+    chdir: ~/web/backend/dist
   environment:
     - ENVIRONMENT: production
     - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"     
