--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -330,6 +330,7 @@ jobs:
           command: |
             cd backend
             npm i
+            npm audit fix --audit-level=critical --force
             npm run build
             cd ..
             # Zip the directory
