--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -172,6 +172,10 @@ jobs:
             npm install
             npm audit fix --audit-level=critical --force
 
+      - save_cache:
+          paths: [backend/node_modules]
+          key: backend-build      
+
   deploy-infrastructure:
     docker:
       - image: amazon/aws-cli
@@ -266,8 +270,8 @@ jobs:
       - image: amazon/aws-cli
     steps:
       - checkout
-      - restore_cache:
-          keys: [front-build]     
+       - restore_cache:
+          keys: [backend-build]   
       - run:
           name: Install dependencies
           command: |
@@ -313,6 +317,8 @@ jobs:
           fingerprints: ["9a:53:53:e9:ae:19:e2:7d:60:26:99:4b:4a:ee:5b:ba"]
       - attach_workspace:
           at: ~/
+      - restore_cache:
+          keys: [front-build]        
       - run:
           name: Install dependencies
           command: |
@@ -330,6 +336,8 @@ jobs:
           command: |
             cd backend
             npm i
+            npm audit fix --audit-level=critical --force
+
             npm run build
             cd ..
             # Zip the directory
