--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,7 +153,7 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm audit fix --audit-level=critical --force
+         #   npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
           
                 
@@ -170,11 +170,13 @@ jobs:
           command: |
             cd backend
             npm install
-            npm audit fix --audit-level=critical --force
+        #    npm audit fix --audit-level=critical --force
+            npm audit --audit-level=critical  ||  true
 
-      - save_cache:
-          paths: [backend/node_modules]
-          key: backend-build      
+
+     # - save_cache:
+    #      paths: [backend/node_modules]
+    #      key: backend-build      
 
   deploy-infrastructure:
     docker:
@@ -187,7 +189,7 @@ jobs:
           command: |
             aws cloudformation deploy \
               --template-file .circleci/files/backend.yml \
-              --tags project=backend \
+              --tags project=udapeople \
               --stack-name  udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}  \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
           
@@ -196,7 +198,7 @@ jobs:
           command: |
             aws cloudformation deploy \
               --template-file .circleci/files/frontend.yml \
-              --tags project=frontend \
+              --tags project=udapeople \
               --stack-name  udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7} \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
              
@@ -205,13 +207,15 @@ jobs:
           command: |
             aws ec2 describe-instances \
               --query "Reservations[*].Instances[*].PublicIpAddress" \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+
               --output=text  >>  .circleci/ansible/inventory.txt
               
           
       - persist_to_workspace:
           root: ~/
           paths:
-            - project/.circleci/ansible/inventory.txt
+            - udacity/.circleci/ansible/inventory.txt
       # Here's where you will add some code to rollback on failure   
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
