--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,28 +1,38 @@
 ---
-
 - name: Creates directory
   file:
-    path: ~/web
+    path: ~/backend_app
     state: directory
 
 - name: Copy files
   template:
-    src: "files/artifact.tar.gz"
-    dest: "~/web/artifact.tar.gz"
+    src: artifact.tar.gz
+    dest: "~/backend_app/artifact.tar.gz"
 
 - name: Extract 
   unarchive:
-    src: "~/web/artifact.tar.gz"
-    dest: "~/web/"
+    src: "~/backend_app/artifact.tar.gz"
+    dest: "~/backend_app/"
 
-- name: Executing node
-  command: |
-    npm install
+
+- name: "Install dependencies for project"
+  shell: |
+    cd ~/backend_app
+    npm install
+- name: "Executing node"
+  shell: |
+    export
+    cd ~/backend_app
     pm2 stop default
     pm2 start npm -- start
-    pm2 start ~/web/main.js 
+    pm2 start main.js
+  register: execute_node
+- name: print message
+  debug:
+    msg: "{{ execute_node.stdout_lines }}"
+
   args:
-    chdir: ~/web/backend/dist
+    chdir: ~/backend_app/backend/dist
   environment:
     - ENVIRONMENT: production
     - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"     
