--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -207,14 +207,13 @@ jobs:
             aws ec2 describe-instances \
               --query "Reservations[*].Instances[*].PublicIpAddress" \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-
               --output=text  >>  .circleci/ansible/inventory.txt
               
           
       - persist_to_workspace:
           root: ~/
           paths:
-            - udacity/.circleci/ansible/inventory.txt
+            - project/.circleci/ansible/inventory.txt
       # Here's where you will add some code to rollback on failure   
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
