--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -13,12 +13,14 @@
   unarchive:
     src: "~/backend_app/artifact.tar.gz"
     dest: "~/backend_app/"
+    remote_src: yes
 
 
 - name: "Install dependencies for project"
   shell: |
     cd ~/backend_app
     npm install
+    
 - name: "Executing node"
   shell: |
     export
