--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -324,7 +324,7 @@ jobs:
           name: Install dependencies
           command: |
             apk add --update ansible
-            apk add --update nodejs npm
+            apk add --update npm
             apk add --update curl
             apk add --update tar  gzip
             apk add python curl
@@ -340,9 +340,8 @@ jobs:
             npm run build
             cd ..
             # Zip the directory
-            tar -C backend -czvf artifact.tar.gz  
-            mkdir -p  .circleci/ansible/roles/deploy/files
-            cp ./artifact.tar.gz  .circleci/ansible/roles/deploy/files
+            tar -C backend -czvf artifact.tar.gz  .
+            cp ./artifact.tar.gz  ~/project/.circleci/ansible/roles/deploy/files
             cd .circleci/ansible
             ansible-playbook -i inventory.txt deploy-backend.yml
       
