--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -6,7 +6,7 @@
 
 - name: Copy files
   copy:
-    src: artifact.tar.gz
+    src: "artifact.tar.gz"
     dest: "~/backend_app/artifact.tar.gz"
 
 - name: Extract 
