--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -8,6 +8,7 @@
   copy:
     src: "artifact.tar.gz"
     dest: "~/backend_app/artifact.tar.gz"
+  
 
 - name: Extract 
   unarchive:
@@ -24,7 +25,7 @@
 - name: "Executing node"
   shell: |
     export
-    cd ~/backend_app
+    cd /backend_app/backend
     pm2 stop default
     pm2 start npm -- start
     pm2 start main.js
