--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -25,8 +25,9 @@
 - name: "Executing node"
   shell: |
     export
-    pm2 stop default
-    pm2 start npm -- start
+    cd ~/backend
+   # pm2 stop default
+  #  pm2 start npm -- start
     pm2 start main.js
   register: execute_node
 - name: print message
