--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,7 +188,7 @@ jobs:
           command: |
             aws cloudformation deploy \
               --template-file .circleci/files/backend.yml \
-              --tags project= hossam-udapeople \
+              --tags project=hossamudapeople \
               --stack-name  udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}  \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
           
