--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -210,7 +210,7 @@ jobs:
                 --query 'Reservations[*].Instances[*].PublicIpAddress' \
                 --output text)
             echo "${env}" >>  .circleci/ansible/inventory.txt
-            cat  circleci/ansible/inventory.txt
+            cat  .circleci/ansible/inventory.txt
              
       - persist_to_workspace:
           root: ~/
@@ -369,16 +369,16 @@ jobs:
       - run:
           name: Get backend url
           command: |
-            export BACKEND_IP=$(aws ec2 describe-instances \
+            export BACKEND_IPP=$(aws ec2 describe-instances \
               \
                 --query 'Reservations[*].Instances[*].PublicIpAddress' \
                 --output text)
-            export API_URL="http://${BACKEND_IP}:3030"
-            echo "${API_URL}"
+            export API_URLL="http://${BACKEND_IPP}:3030"
+            echo "${API_URLL}"
       - run:
           name: Backend smoke test.
           command: |
-            if curl  "${API_URL}/api/status"  |  grep "ok"
+            if curl  "${API_URLL}/api/status"  |  grep "ok"
             then
                 return 0
             else
