--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -371,7 +371,7 @@ jobs:
       - run:
           name: Backend smoke test.
           command: |
-            if curl  "${API_URLL}/api/status"  |  grep "ok"
+            if curl  "${API_URL}/api/status"  |  grep "ok"
             then
                 return 0
             else
