--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -361,6 +361,10 @@ jobs:
           name: Install dependencies
           command: |
             apk add --update curl
+            apk add python curl
+            curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
+            unzip awscli-bundle.zip
+            ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws
 
       - attach_workspace:
           at: ~/      
