--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -201,11 +201,10 @@ jobs:
       - run:
           name: Addd back-end ip to ansible inventory
           command: |
-            export env=$(aws ec2 describe-instances \   
+            aws ec2 describe-instances \   
                 --query 'Reservations[*].Instances[*].PublicIpAddress' \
                 --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}"\
-                --output text)
-            echo "${env}" >>  .circleci/ansible/inventory.txt
+                --output text   >>  .circleci/ansible/inventory.txt
             cat  .circleci/ansible/inventory.txt
              
       - persist_to_workspace:
