--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -445,7 +445,7 @@ jobs:
           name: Remove old stacks and files
           command: |
             export OldWorkflowID=$(aws cloudformation \
-                    list-exports --query "Exports[?Name==\`oldWorkflowID\`].Value" \
+                    list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
                     --no-paginate --output text | cut -d '-' -f2- )
             echo OldWorkflowID: "${OldWorkflowID}"
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
