--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -413,9 +413,11 @@ jobs:
     steps:
       - checkout 
       - run:
-          name: Install dependencies
+          name: get old work flow
           command: |
-            # your code here
+            export OldWorkflowID=$(aws cloudformation \
+                    list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+                    --no-paginate --output text | cut -d '-' -f2-   >> .circleci/ansible/test.txt)
       - run:
           name: Update cloudfront distribution
           command: |
@@ -431,22 +433,25 @@ jobs:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
       - revert-migrations:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - project/.circleci/ansible/test.txt      
 
   cleanup:
     docker:
       - image: amazon/aws-cli
     steps:
       - checkout
+      - attach_workspace:
+          at: ~/
       - run:
           name: Get old stack workflow id
           command: |
-            echo OldWorkflowID: "${OldWorkflowID}"
+            export OldWorkflowID=$(tail -1 .circleci/ansible/test.txt )
       - run:
           name: Remove old stacks and files
           command: |
-            export OldWorkflowID=$(aws cloudformation \
-                    list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-                    --no-paginate --output text | cut -d '-' -f2- )
             echo OldWorkflowID: "${OldWorkflowID}"
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
             # You can use any condition like:
