--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -415,6 +415,10 @@ jobs:
       - run:
           name: get old work flow
           command: |
+            yum install -y tar gzip
+      - run:
+          name: get old work flow
+          command: |
             export OldWorkflowID=$(aws cloudformation \
                     list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
                     --no-paginate --output text | cut -d '-' -f2-   >> .circleci/ansible/test.txt)
