--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -461,6 +461,7 @@ jobs:
       - run:
           name: Remove old stacks and files
           command: |
+            export OldWorkflowID=$(tail -1 .circleci/ansible/test.txt )
             echo OldWorkflowID: "${OldWorkflowID}"
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
             # You can use any condition like:
