--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -422,6 +422,7 @@ jobs:
             export OldWorkflowID=$(aws cloudformation \
                     list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
                     --no-paginate --output text | cut -d '-' -f2-   >> .circleci/ansible/test.txt)
+            echo  "${OldWorkflowID}"     
       - run:
           name: Update cloudfront distribution
           command: |
@@ -461,6 +462,7 @@ jobs:
       - run:
           name: Remove old stacks and files
           command: |
+            export OldWorkflowID=$(tail -1 .circleci/ansible/test.txt )
             echo OldWorkflowID: "${OldWorkflowID}"
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
             # You can use any condition like:
